# Explain

./: .envrc  .gitignore  COPYRIGHT  MANIFEST.in  Makefile  README.md  install.sh  pyproject.toml
completions/: _explain  explain.bash  explain.fish  install-bash-user.sh
docs/: CLI.md
explain/: __init__.py  __main__.py  cli.py  extract.py  man_capsule.py  pattern_index.py  patterns.py  shell_completions.py  ub_context.py  ub_crash.py  ub_heuristics.py  ub_risk.py
explain/capsules/: __init__.py  asm_lang.py  c_capsules_extended.py  c_capsules_gap.py  c_lang.py  cpp_capsules.py  csharp_capsules.py  handwritten_extra.py  js_priority_capsules.py  linker_capsules_textual.py  man_coverage_bulk.py  python_priority_capsules.py  rust_capsules.py  support_extension_capsules.py
explain/patterns/: __init__.py  assembly.py  assembly_warnings.py  c_lang.py  c_warnings.py  cpp_extra.py  cpp_warnings.py  csharp.py  csharp_frameworks.py  csharp_warnings.py  js_frameworks.py  js_ts.py  js_warnings.py  python_frameworks.py  python_lang.py  python_warnings.py  rust_lang.py  rust_warnings.py
man/: explain.1
tests/: __init__.py  test_cli_analizar.py  test_cli_subprocess.py  test_focus_posicional.py  test_lang_auto_inference.py  test_man_capsule.py  test_shell_completions_install.py  test_ub_context.py  test_ub_context_snippets.py  test_ub_risk.py
