[project]
name = "explain-errors"
version = "0.1.0"
description = "Explicador determinista de mensajes de compilación/ejecución (español, sin IA)"
requires-python = ">=3.9"
dependencies = []

[project.scripts]
explain = "explain.cli:main"

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["explain*"]
